[workspace]
resolver = "2"
members = [
    "core/prism-gpu",
    "core/prism-core",
    "core/prism-fluxnet",
    "core/prism-physics",
    "modules/prism-niv-bench",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["PRISM-AI Research Team"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GPU acceleration
cudarc = { version = "0.18.2", features = ["std", "cuda-version-from-build-system", "driver"] }

# Math and science
rand = "0.8"
fastrand = "2.0"
nalgebra = "0.32"
ndarray = "0.15"

# Logging and utilities
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }

# Inter-crate dependencies
prism-core = { path = "core/prism-core" }
prism-gpu = { path = "core/prism-gpu" }
prism-fluxnet = { path = "core/prism-fluxnet" }
prism-physics = { path = "core/prism-physics" }

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true